--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.11.17",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
